--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,11 @@
                 </div>
                 <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
                 <p>{{ post.text|linebreaksbr }}</p>
+                <div >
+                   {% if post.article_image %}
+                        <img src="{{MEDIA_URL}}{{post.article_image.url}}">
+                   {% endif %}
+                </div>
             </div>
         {% endfor %}
     {% endblock content %}
